# MyRenderer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  LightSource.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MyFunctions.cpp  MyFunctions.h  PointLight.cpp  PointLight.h  README.md  RenderData.cpp  RenderData.h  Scene.cpp  Shader.cpp  Shader.h  SpotLight.h  Texture2D.cpp  Texture2D.h  WindowManager.cpp  WindowManager.h  glad.c  lighting_structs.h  main.cpp  old-comments.txt
GameLib/: CMakeLists.txt
GameLib/include/GameLib/: api.h
GameLib/src/: Behavior.cpp  Behavior.h  CameraManager.cpp  CameraManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameObjectLoader.cpp  GameObjectLoader.h  GameObjectVisitor.cpp  GameObjectVisitor.h  LightSrcObject.cpp  LightSrcObject.h  PlayerObject.cpp  PlayerObject.h  SceneBuilderVisitor.cpp  SceneBuilderVisitor.h  TestBehavior.cpp  TestBehavior.h
GraphicsLib/: CMakeLists.txt
GraphicsLib/include/GraphicsLib/: api.h
GraphicsLib/src/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  FrameBuffer.cpp  FrameBuffer.h  FullscreenQuad.cpp  FullscreenQuad.h  GBuffer.cpp  GBuffer.h  LightSource.cpp  LightSource.h  LightSourceFactory.cpp  LightSourceFactory.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  PositionalLight.cpp  PositionalLight.h  Quad.cpp  Quad.h  RenderData.cpp  RenderData.h  RenderObject.cpp  RenderObject.h  RenderObjectFactory.cpp  RenderObjectFactory.h  Renderable.cpp  Renderable.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  Skybox.h  (+7 more)
JsonLib/: CMakeLists.txt
JsonLib/include/JsonLib/: api.h
JsonLib/src/: json_utils.cpp  json_utils.h
graphics_lib/: CMakeLists.txt
graphics_lib/include/: graphics-api.h
graphics_lib/src/: DirectionalLight.cpp  Shader.cpp  Texture2D.cpp
libs/graphics/: CMakeLists.txt
libs/graphics/src/: Camera.h  LightSource.h  Mesh.cpp  Mesh.h  Model.h  RenderData.cpp  Scene.cpp  Scene.h  Shader.h  Texture2D.h  WindowManager.cpp  WindowManager.h  lighting_structs.h
libs/graphics_lib/: CMakeLists.txt
libs/graphics_lib/include/: Camera.h  LightSource.h  Mesh.h  RenderData.h  Scene.h  SpotLight.h  WindowManager.h  graphics.h
libs/graphics_lib/src/: Camera.cpp  DirectionalLight.cpp  LightSource.cpp  LightSource.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointLight.cpp  RenderData.cpp  RenderData.h  Scene.cpp  Shader.cpp  SpotLight.cpp  Texture2D.cpp  WindowManager.cpp  WindowManager.h
resources/json/: backpack.json  floor.json  lantern.json  room.json  sun.json  tester.json  yeah.json  yeah1.json
resources/shaders/: f-lightsrc-1  f-shader-3  f4.frag  floor.frag  floor.vert  gbuf-geo.frag  gbuf-geo.vert  gbuf-light.frag  gbuf-light.vert  lantern.frag  lantern.vert  skybox.frag  skybox.vert  v-lightsrc-1
resources/shaders/old/: f-shader-1  f-shader-2  v-shader-mvmt
shaders/: f4  f4.frag  v4  v4.vert
shaders/old/: v-shader-1
